Refresh Button Added and some Bug fixed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Tuar</string>
-    <string name="title_activity_maps">Taur</string>
+    <string name="title_activity_maps">Tuar</string>
 </resources>
